syntax = "proto3";

package hero;

service HeroesService {
    rpc FindOne (HeroDto) returns (Hero) {}
}

message HeroDto {
    int32 id = 1;
}

message Hero {
    int32 id = 1;
    string name = 2;
}